# walle3-vlm

./: .gitignore  ISSUES.md  LICENSE  README.md  README_BA_PM_PACKAGE.md  README_WALLE3_BA_PM_PLAN.md  record_demo.sh  requirements.txt  run_walle.sh  walle.rviz
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_report.md  feature_request.md  safety_issue.md  uat_failure.md
analytics/: README.md
analytics/dashboard/: dashboard_spec.md
analytics/python/: mission_kpi_analysis.py
analytics/sample_data/: fact_inference_events.csv  fact_missions.csv  fact_safety_events.csv
analytics/sql/: 01_mission_success_rate.sql  02_intervention_rate.sql  03_stuck_abort_root_cause.sql  04_vlm_latency_p95.sql  05_roi_by_site.sql
docs/adr/: ADR-001-dual-loop-vlm-architecture.md  ADR-002-cmd-vel-priority-mux.md  ADR-003-json-event-contract.md  ADR-004-local-vlm-vs-cloud.md
docs/business/: market_use_case_analysis.md  workflow_analysis.md
docs/data/: data_dictionary.md
docs/deployment/: site_survey_checklist.md
docs/product/: 00_portfolio_case_study.md  01_product_one_pager.md  02_business_requirements_document.md  03_product_requirements_document.md  04_personas_user_journey.md  05_service_blueprint.md  06_backlog_user_stories.md  07_requirements_traceability_matrix.md  08_kpi_dashboard_spec.md  09_event_contract_v1.md  10_risk_register_fmea.md  README.md  (+9 more)
walle_ws/: README.md
walle_ws/src/walle_bringup/: CMakeLists.txt  package.xml
walle_ws/src/walle_bringup/config/: bridge.yaml  controllers.yaml  vlm_config.yaml
walle_ws/src/walle_bringup/launch/: sim.launch.py  sim_warehouse.launch.py  vlm.launch.py
walle_ws/src/walle_bringup/worlds/: walle_arena.sdf  walle_warehouse.sdf
walle_ws/src/walle_demo/: package.xml  setup.cfg  setup.py
walle_ws/src/walle_demo/walle_demo/: cmd_vel_mux.py  expressive.py  language_interface.py  mission_logger_node.py  perception.py  rosbag_trigger_node.py  stuck_watchdog_node.py  test_yolo_webcam.py  vlm_perception.py  vlm_planner.py  vlm_utils.py  walle_terminal.py  wander.py
walle_ws/src/walle_demo/walle_demo/terminal/: app.py  ros_bridge.py  walle_terminal.tcss
walle_ws/src/walle_demo/walle_demo/terminal/widgets/: command_input.py  log_panel.py  state_panel.py
walle_ws/src/walle_description/: CMakeLists.txt  package.xml
walle_ws/src/walle_description/urdf/: walle.urdf.xacro
(+5 files in other folders)
