<?xml version="1.0"?>
<package format="3">
  <name>walle_bringup</name>
  <version>0.1.0</version>
  <description>Bringup, controllers, bridge, and Gazebo world for the WALL-E inspired simulation.</description>
  <maintainer email="opensource@openai.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing_ament_cmake</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>walle_description</exec_depend>
  <exec_depend>walle_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
