<?xml version="1.0"?>
<package format="3">
  <name>walle_demo</name>
  <version>0.1.0</version>
  <description>Autonomy and expressive behavior nodes for the WALL-E inspired Gazebo simulation.</description>
  <maintainer email="opensource@openai.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
