<?xml version="1.0"?>
<package format="3">
  <name>walle_description</name>
  <version>0.1.0</version>
  <description>WALL-E inspired robot description package for ROS 2 Jazzy and Gazebo Harmonic.</description>
  <maintainer email="opensource@openai.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
